Closed Bug 579374 Opened 16 years ago Closed 15 years ago

Tooltip border is inconsistent when one is used on a web element.

Categories

(Core :: Layout, defect, P5)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla2.0b11
Tracking Status
blocking2.0 --- final+

People

(Reporter: shane.bundy, Assigned: ehsan.akhgari)

References

()

Details

(Keywords: regression, Whiteboard: [softblocker][retainedlayers][fx4-fixed-bugday])

Attachments

(5 files)

User-Agent: Mozilla/5.0 (Windows; Windows NT 5.1; en-US; rv:2.0b2pre) Gecko/20100716 Minefield/4.0b2pre Build Identifier: Mozilla/5.0 (Windows; Windows NT 5.1; en-US; rv:2.0b2pre) Gecko/20100716 Minefield/4.0b2pre When I was mousing over one of the bot labels (green, orange or red) I noticed the tooltip border was broken along the edges. It is the same missing pixels no matter what I moused over. Reproducible: Always Steps to Reproduce: On the provided URL, mouse over one of the bot labels next to any of the OSes (e.g. Bd, Bo, etc.) Actual Results: Notice the tooltip has pixels missing from its border. Expected Results: The border should be complete. Does not happen within the browser UI.
blocking1.9.1: --- → ?
blocking1.9.2: --- → ?
blocking2.0: --- → ?
Flags: in-testsuite?
Flags: in-litmus?
Priority: -- → P5
Version: unspecified → Trunk
Works; http://hg.mozilla.org/mozilla-central/rev/92339b84d089 Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; en-US; rv:2.0b2pre) Gecko/20100715 Minefield/4.0b2pre ID:20100715145415 fails; http://hg.mozilla.org/mozilla-central/rev/e1d7fd5255fd Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; en-US; rv:2.0b2pre) Gecko/20100715 Minefield/4.0b2pre ID:20100715152722 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=92339b84d089&tochange=e1d7fd5255fd
If this is a recent trunk regression I don't see how it blocks old branches
blocking1.9.1: ? → ---
blocking1.9.2: ? → ---
Blocks: 564991
Severity: trivial → normal
blocking2.0: ? → ---
Component: General → Layout
Flags: in-testsuite?
Flags: in-litmus?
Keywords: regression
Priority: P5 → --
Product: Firefox → Core
QA Contact: general → layout
Attached image Another test case
Here is another test case but from Bugzilla.
(In reply to comment #4) > Created attachment 457961 [details] > Another test case > > Here is another test case but from Bugzilla. That example has artifacts from the page around the tooltip. My bad.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached image screenshot
(In reply to comment #0) > Does not happen within the browser UI. happen on tooltip for tab, back/forward button, home button... all tooltip. Windows 7.
@pal-moz - Confirmed. At first I didn't notice it but on closer inspection it has the same tooltip problem. Thank you for pointing that out for me.
It doesn't happen to the tooltips on the bookmark toolbar or the 'new tab' tooltip. Very odd. :-/
Every tooltip that contains only one line of text is displayed with a broken border. Tooltips that contain multiple lines of text are displayed fine. Therefore the tooltips of bookmarks are displayed correctly - they always contain two lines of text. The 'new tab' tooltip is odd - it only contains one line of text, but is displayed correct anyway.
It appears that the size of previous tooltips is being remembered, which is the source of the weirdness. Try hovering over multiple Bugzilla links in a depends list and notice how the the larger ones show glitches near where the edges of the smaller ones were.
It happens to me, too, when I have Direct2D and DirectWrite enabled. Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; rv:2.0b3pre) Gecko/20100726 Minefield/4.0b3pre
'New tab' button is now affected by this issue.
(In reply to comment #14) In the 27/07/2010 trunk build, the 'new tab' tooltip is no longer affected. (?)
(In reply to comment #15) > (In reply to comment #14) > > In the 27/07/2010 trunk build, the 'new tab' tooltip is no longer affected. (?) I still see this bug exactly as before on Minefield 4.0b3pre (x64 version, 20100728).
Priority: -- → P5
blocking2.0: --- → ?
I think this is a regression from the "retain layers and layer contents" check-in, bug 564991.
doh... now I see this issue is already blocking that issue. Sorry...
OS: Windows XP → All
It appears to be fixed on Windows 7 when the Win7 theme is used. I'm unsure if it still occurs on XP or when the Windows Classic theme is used.
Not yet fixed in Beta 4 on Windows XP with classic theme.
Apparently fixed in Firefox 4.0 beta 5 build 1, as I see using Windows Classic.
I'm still seeing this in Firefox 4.0 beta 5 build 1 on Linux. I don't know if that means it's fixed for Windows or your setup or isn't really fixed.
So this is fixed on Windows (somehow) but I guess Linux still has this problem. Any word on Mac yet?
Finding out when and what fixed this on Windows might be helpful to fixing this on Linux.
(In reply to comment #24) > Finding out when and what fixed this on Windows might be helpful to fixing this > on Linux. maybe fixed range is between 2010-08-19-10 and 2010-08-20-04
I have a different range with force enable D2D. user_pref("gfx.font_rendering.directwrite.enabled",true); user_pref("gfx.direct2d.force-enabled", true); Broken: http://hg.mozilla.org/mozilla-central/rev/17f4064c1d23 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b4pre) Gecko/20100813 Minefield/4.0b4pre ID:20100813230431 Fixed: http://hg.mozilla.org/mozilla-central/rev/536ac334d335 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b4pre) Gecko/20100813 Minefield/4.0b4pre ID:20100814003550 Fixed range: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=17f4064c1d23&tochange=536ac334d335
And In Windows XP Classc Style(Disabled D2D) Broken: http://hg.mozilla.org/mozilla-central/rev/c7b53c12191b Mozilla/5.0 (Windows NT 5.1; rv:2.0b5pre) Gecko/20100819 Minefield/4.0b5pre ID:20100819210405 Fixed: http://hg.mozilla.org/mozilla-central/rev/9976121e4d31 Mozilla/5.0 (Windows NT 5.1; rv:2.0b5pre) Gecko/20100819 Minefield/4.0b5pre ID:20100819215122 Fixed Range: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=c7b53c12191b&tochange=9976121e4d31
(In reply to comment #25) > (In reply to comment #24) > > Finding out when and what fixed this on Windows might be helpful to fixing this > > on Linux. > > maybe fixed range is between 2010-08-19-10 and 2010-08-20-04 is on XP with Luna theme. (all HW acceleration OFF)
Thanks for that. If we do the approximately same thing on Linux as those changesets do for Windows the bug is fixed.
You mean you have a patch that fixes this? Can you take this bug then? :-)
I just blindly ported http://hg.mozilla.org/mozilla-central/rev/2f75f983440c to Linux, someone who knows what is actually going on should write the patch.
Can someone on Mac please report if this bug is down to Linux specific? Is Mac (still) affected too? Shane asked above but no one has said yet if Mac needs a fix here too, or it's unaffected.
Whiteboard: [see comment 31 for fix starting point]
Whiteboard: [see comment 31 for fix starting point] → [see comment 31 for fix starting point][softblocker]
Whiteboard: [see comment 31 for fix starting point][softblocker] → [see comment 31 for fix starting point][softblocker][retainedlayers]
I can't reproduce with recent Linux build. Is this fixed by bug 615794?
(In reply to comment #35) > I can't reproduce with recent Linux build. I still see the issue with a Firefox build from <http://hg.mozilla.org/mozilla-central/rev/df3c1150dd7a>.
Attached image screenshot
I can reproduce. http://hg.mozilla.org/mozilla-central/rev/8f1c39add00f Mozilla/5.0 (X11; Linux i686; rv:2.0b9pre) Gecko/20110108 Firefox/4.0b9pre ID:20110108030351
I was wrong. It's still reproduce for me too. Sorry for the spam.
Attached patch Patch (v1)Splinter Review
Attachment #505949 - Flags: review?(roc)
OS: All → Linux
Whiteboard: [see comment 31 for fix starting point][softblocker][retainedlayers] → [softblocker][retainedlayers]
Whiteboard: [softblocker][retainedlayers] → [softblocker][retainedlayers][has patch][needs review roc]
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [softblocker][retainedlayers][has patch][needs review roc] → [softblocker][retainedlayers]
Target Milestone: --- → mozilla2.0b10
Target Milestone: mozilla2.0b10 → mozilla2.0b11
Verified fixed with Firefox 4.0b11build3
Status: RESOLVED → VERIFIED
Whiteboard: [softblocker][retainedlayers] → [softblocker][retainedlayers][fx4-fixed-bugday]
Blocks: 713572
No longer blocks: 713572
Depends on: 713572
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: