Bug 579374 - Clear cached resources for GTK windows when we hide/destroy them; r=roc a=blocking-final+

This fixes tooltip border rendering problems on Linux.